# AniFlow

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
aniflow/: __init__.py  app.py  archive.py  download_health.py  downloader.py  experience.py  library.py  matching.py  mikan.py  poster_cache.py  settings.py  store.py
aniflow/static/: app.css  app.js  brand.css  dashboard-layout.css  media-actions.css  media-center.css  media-library-v2.css  settings.css  subscriptions-tasks-v2.css  theme-controls.css
aniflow/templates/: base.html  dashboard.html  discover.html  library.html  notifications.html  search.html  settings.html  subscriptions.html  tasks.html  watch.html
deploy/: aniflow.service  nginx.conf.example
tests/: test_archive.py  test_download_health.py  test_downloader.py  test_experience.py  test_library.py  test_matching.py  test_mikan.py  test_player.py  test_poster_cache.py  test_settings.py  test_store.py  test_web.py
