[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "aniflow"
version = "0.1.0"
description = "Self-hosted anime subscription and download manager"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["anime", "rss", "torrent", "fastapi", "self-hosted"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "apscheduler>=3.10,<4",
  "beautifulsoup4>=4.12,<5",
  "fastapi>=0.115,<1",
  "feedparser>=6,<7",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4",
  "python-multipart>=0.0.18,<1",
  "sqlalchemy>=2,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.urls]
Homepage = "https://github.com/mzxuan08/AniFlow"
Repository = "https://github.com/mzxuan08/AniFlow"
Issues = "https://github.com/mzxuan08/AniFlow/issues"

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.24,<1", "ruff>=0.8,<1"]

[tool.setuptools.packages.find]
include = ["aniflow*"]

[tool.setuptools.package-data]
aniflow = ["templates/*.html", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
